Alignment fix for ToS checkbox

--- a/src/styles/components/checkout-summary.scss
+++ b/src/styles/components/checkout-summary.scss
@@ -48,6 +48,11 @@ section.checkout-summary {
 
   }
 
+
+  form {
+    text-align: left;
+  }
+
   button[type="submit"] {
     margin-top: 2em;
   }
